<resources>
    <string name="app_name">Gadgetbridge</string>
    <string name="title_activity_controlcenter">Gadgetbridge</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="action_quit">Quit</string>
    <string name="action_donate">Donate</string>
    <string name="controlcenter_fetch_activity_data">Synchronize</string>
    <string name="controlcenter_find_device">Find lost device</string>
    <string name="controlcenter_take_screenshot">Take Screenshot</string>
    <string name="controlcenter_change_led_color">Change LED Color</string>
    <string name="controlcenter_change_fm_frequency">Change FM Frequency</string>
    <string name="controlcenter_connect">Connect…</string>
    <string name="controlcenter_disconnect">Disconnect</string>
    <string name="controlcenter_delete_device">Delete Device</string>
    <string name="controlcenter_delete_device_name">Delete %1$s</string>
    <string name="controlcenter_delete_device_dialogmessage">This will delete the device and all associated data!</string>
    <string name="controlcenter_navigation_drawer_open">Open navigation drawer</string>
    <string name="controlcenter_navigation_drawer_close">Close navigation drawer</string>
    <string name="controlcenter_snackbar_need_longpress">Long press the card to disconnect</string>
    <string name="controlcenter_snackbar_disconnecting">Disconnecting</string>
    <string name="controlcenter_snackbar_connecting">Connecting…</string>
    <string name="controlcenter_snackbar_requested_screenshot">Taking a screenshot of the device</string>
    <string name="controlcenter_calibrate_device">Calibrate Device</string>
    <string name="title_activity_debug">Debug</string>
    <string name="debugactivity_really_factoryreset_title">Really factory reset?</string>
    <string name="debugactivity_really_factoryreset">Doing a factory reset will delete all data from the connected device (if supported). Xiaomi/Huami devices also change Bluetooth MAC address, so they appear as a new devices to Gadgetbrige.</string>
    <string name="title_activity_appmanager">App Manager</string>
    <string name="appmanager_cached_watchapps_watchfaces">Apps in cache</string>
    <string name="appmanager_installed_watchapps">Installed apps</string>
    <string name="appmanager_installed_watchfaces">Installed watchfaces</string>
    <string name="appmananger_app_delete">Delete</string>
    <string name="appmananger_app_delete_cache">Delete and remove from cache</string>
    <string name="appmananger_app_reinstall">Reinstall</string>
    <string name="appmanager_app_openinstore">Search in Pebble appstore</string>
    <string name="appmanager_health_activate">Activate</string>
    <string name="appmanager_health_deactivate">Deactivate</string>
    <string name="appmanager_hrm_activate">Activate HRM</string>
    <string name="appmanager_hrm_deactivate">Deactivate HRM</string>
    <string name="appmanager_weather_activate">Activate System Weather app</string>
    <string name="appmanager_weather_deactivate">Deactivate System Weather app</string>
    <string name="appmanager_weather_install_provider">Install the Weather Notification app</string>
    <string name="app_configure">Configure</string>
    <string name="app_move_to_top">Move to top</string>
    <string name="title_activity_appblacklist">Notification blacklist</string>
    <string name="blacklist_all_for_notifications">Blacklist all for notifications</string>
    <string name="whitelist_all_for_notifications">Whitelist all for notifications</string>
    <string name="title_activity_calblacklist">Blacklisted Calendars</string>
    <string name="title_activity_fw_app_insaller">FW/App installer</string>
    <string name="fw_upgrade_notice">You are about to install the %s.</string>
    <string name="fw_upgrade_notice_amazfitbip">You are about to install the %s firmware on your Amazfit Bip.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitbip_lite">You are about to install the %s firmware on your Amazfit Bip Lite.\n\nPlease make sure to install the .fw file, and after that the .res file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitcor">You are about to install the %s firmware on your Amazfit Cor.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitcor2">You are about to install the %s firmware on your Amazfit Cor 2.
\n
\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.
\n
\nNote: You do not have to install .res if it is exactly the same as the one previously installed.
\n
\nPROCEED AT YOUR OWN RISK!
\n
\nCOMPLETELY UNTESTED, PROBABLY YOU NEED TO FLASH A BEATS_W FIRMWARE IF YOUR DEVICE NAME IS \"Amazfit Band 2\"</string>
    <string name="fw_upgrade_notice_amazfitgtr">You are about to install the %s firmware on your Amazfit GTR.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_amazfitgts">You are about to install the %s firmware on your Amazfit GTS.\n\nPlease make sure to install the .fw file, then the .res file, and finally the .gps file. Your watch will reboot after installing the .fw file.\n\nNote: You do not have to install .res and .gps if these files are exactly the same as the ones previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_miband3">You are about to install the %s firmware on your Mi Band 3.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_upgrade_notice_miband4">You are about to install the %s firmware on your Mi Band 4.\n\nPlease make sure to install the .fw file, and after that the .res file. Your band will reboot after installing the .fw file.\n\nNote: You do not have to install .res if it is exactly the same as the one previously installed.\n\nPROCEED AT YOUR OWN RISK!</string>
    <string name="fw_multi_upgrade_notice">You are about to install the %1$s and %2$s firmware, instead of the ones currently on your Mi Band.</string>
    <string name="miband_firmware_known">This firmware has been tested and is known to be compatible with Gadgetbridge.</string>
    <string name="miband_firmware_unknown_warning">"This firmware is untested and may not be compatible with Gadgetbridge.\n\nYou are DISCOURAGED from flashing it!"</string>
    <string name="miband_firmware_suggest_whitelist">If you still want to proceed and things continue to work properly afterwards, please tell the Gadgetbridge developers to whitelist the %s firmware version.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General settings</string>
    <string name="pref_title_general_autoconnectonbluetooth">Connect to Gadgetbridge device when Bluetooth is turned on</string>
    <string name="pref_title_general_autostartonboot">Start automatically</string>
    <string name="pref_title_general_autoreconnect">Reconnect automatically</string>
    <string name="pref_title_audio_player">Preferred Audioplayer</string>
    <string name="pref_default">Default</string>
    <string name="pref_header_datetime">Date and Time</string>
    <string name="pref_title_datetime_syctimeonconnect">Sync time</string>
    <string name="pref_summary_datetime_syctimeonconnect">Sync time to Gadgetbridge device when connecting, and when time or time zone changes on Android device</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_minimize_priority">Hide the Gadgetbridge notification</string>
    <string name="pref_summary_minimize_priority_off">The icon in the status bar and the notification in the lockscreen are shown</string>
    <string name="pref_summary_minimize_priority_on">The icon in the status bar and the notification in the lockscreen are hidden</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notifications_repetitions">Repetitions</string>
    <string name="pref_title_notifications_call">Phone Calls</string>
    <string name="pref_title_support_voip_calls">Enable VoIP app calls</string>
    <string name="pref_title_notifications_sms">SMS</string>
    <string name="pref_title_notifications_timeout">Minimum time between notifications</string>
    <string name="pref_title_notifications_pebblemsg">Pebble Messages</string>
    <string name="pref_summary_notifications_pebblemsg">Support for apps that send notifications to the Pebble via PebbleKit.</string>
    <string name="pref_title_notifications_generic">Generic notification support</string>
    <string name="pref_title_whenscreenon">…also when screen is on</string>
    <string name="pref_title_notification_filter">Do Not Disturb</string>
    <string name="pref_summary_notification_filter">Unwanted notifications are stopped in this mode</string>
    <string name="pref_title_transliteration">Transliteration</string>
    <string name="pref_summary_transliteration">Enable this if your device has no support for your language\'s font</string>
    <string name="pref_title_rtl">Right-To-Left</string>
    <string name="pref_summary_rtl">Enable this if your device can not show right-to-left languages</string>
    <string name="pref_rtl_max_line_length">Right-To-Left Max Line Length</string>
    <string name="pref_rtl_max_line_length_summary">Lengthens or shortens the lines Right-To-Left text is separated into</string>
    <string name="activity_db_management_import_export_explanation">The database operations use the following path on your device. \nThis path is accessible to other Android apps and your computer. \nExpect to find your exported database (or place the database you want to import) there:</string>
    <string name="activity_db_management_merge_old_title">Legacy database delete</string>
    <string name="activity_db_management_autoexport_explanation">Database autoexport location has been set to:</string>
    <string name="activity_db_management_autoexport_label">AutoExport</string>
    <string name="activity_DB_import_button">Import DB</string>
    <string name="activity_DB_test_export_button">Run AutoExport Now</string>
    <string name="activity_DB_delete_legacy_button">Delete old DB</string>
    <string name="activity_DB_empty_button">Empty DB</string>
    <string name="activity_db_management_empty_DB">Empty Database</string>
    <string name="activity_db_management_exportimport_label">Export and Import</string>
    <string name="activity_db_management_empty_db_warning">Warning! By pushing this button you will wipe your database and start from scratch.</string>
</resources>