<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nodomain.freeyourgadget.gadgetbridge.activities.ControlCenterv2">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            grid:alignmentMode="alignBounds"
            grid:columnCount="2">


            <Button
                android:id="@+id/firstDBButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="First setup" />

            <Button
                android:id="@+id/syncDBButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Save-Sync data" />

            <TextView
                android:id="@+id/syncText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Last Sync Date: "
                android:textAppearance="?android:attr/textAppearanceSmall"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <TextView
                android:id="@+id/nowDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Now Date: "
                android:textAppearance="?android:attr/textAppearanceSmall"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <TextView
                android:id="@+id/syncDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Sync confirmation: "
                android:textAppearance="?android:attr/textAppearanceSmall"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <Button
                android:id="@+id/updatekey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Update key"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <EditText
                android:id="@+id/publickey"
                android:layout_width="180dp"
                android:hint="publickey"
                android:inputType="text" />

            <Button
                android:id="@+id/pubkeyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Save key" />

            <EditText
                android:id="@+id/tokenText"
                android:layout_width="180dp"
                android:hint="token"
                android:inputType="text" />

            <Button
                android:id="@+id/tokenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Save token" />

            <TextView
                android:id="@+id/db_management_intro"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_db_management_import_export_explanation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <TextView
                android:id="@+id/exportImportLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_db_management_exportimport_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/accent"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <TextView
                android:id="@+id/activity_db_management_path"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <Button
                android:id="@+id/exportDBButton"
                android:text="Export DB"
                android:layout_marginTop="40dp"
                grid:layout_column="0"
                grid:layout_gravity="center" />

            <Button
                android:id="@+id/importDBButton"
                android:text="@string/activity_DB_import_button"
                grid:layout_column="0" />

            <TextView
                android:id="@+id/autoExportLocation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/activity_db_management_autoexport_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/accent"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <TextView
                android:id="@+id/autoExportLocation_intro"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_db_management_autoexport_explanation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <TextView
                android:id="@+id/autoExportLocation_path"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <Button
                android:id="@+id/testExportDBButton"
                android:text="@string/activity_DB_test_export_button"
                grid:layout_column="0"
                grid:layout_gravity="center" />

            <TextView
                android:id="@+id/mergeOldActivityDataTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/activity_db_management_merge_old_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/accent"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <Button
                android:id="@+id/deleteOldActivityDB"
                android:layout_weight="1"
                android:text="@string/activity_DB_delete_legacy_button" />

            <TextView
                android:id="@+id/emptyActivityDataTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/activity_db_management_empty_DB"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/accent"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <TextView
                android:id="@+id/emptyDBText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_db_management_empty_db_warning"
                android:textAppearance="?android:attr/textAppearanceSmall"
                grid:layout_columnSpan="2"
                grid:layout_columnWeight="1" />

            <Button
                android:id="@+id/emptyDBButton"
                android:text="@string/activity_DB_empty_button" />

        </androidx.gridlayout.widget.GridLayout>

    </ScrollView>

</RelativeLayout>
